dev/monster-rolodex/templates/service.yaml
---
# Source: monster-rolodex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monster-rolodex-dev
  labels:
    app: monster-rolodex
    chart: monster-rolodex-0.1.0
    release: monster-rolodex-dev
    heritage: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 31720
      protocol: TCP
      name: http
  selector:
    app: monster-rolodex
    release: monster-rolodex-dev
